# algorithms_for_sustainability

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/qcomp_qchem/: components.py  h2_interatomic_distance.ipynb  lithium_silicon.ipynb  tmp3sll4vdt
src/quantum_algorithms/vqe/: distance_finder.py  energy_calculation.py  h2_interatomic_distance.ipynb  plotting.py
tests/integration_tests/test_vqe/: test_energy_calculation.py
tests/test_qcomp_qchem/: test_components.py  tmp1d5vgr7r  tmpeobwe9qh  tmpks6jucod  tmpoxn7f_ou
tests/test_vqe/: test_distance_finder.py  test_energy_calculation.py
tests/unit_tests/test_vqe/: test_distance_finder.py  test_energy_calculation.py
