[metadata]
name=algorithms_for_sustainability
version=0.0.1

[options]
package_dir=
   =src
packages=find:
python_requires = >=3.9
install_requires =
   h5py
   jupyter
   pyqmc
   pyscf
   qiskit
   qiskit-nature
   setuptools<65.6  # https://github.com/numpy/numpy/issues/22623
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
dev =
   coverage
   pytest
   pytest-mock
   flake8
   black
   mypy
   pylint

[flake8]
max-line-length = 120

[mypy]
mypy_path = src
disallow_untyped_defs = True
disallow_any_unimported = True
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = True
show_error_codes = True
warn_unused_ignores = True
